Make gitignore work with the proper filenames

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-./LevelPrototypeFP2/[Ll]ibrary/*
-./LevelPrototypeFP2/[Tt]emp/*
-./LevelPrototypeFP2/[Oo]bj/*
-./LevelPrototypeFP2/[Bb]uild/*
-./LevelPrototypeFP2/[Bb]uilds/*
-./LevelPrototypeFP2/[Ll]ogs/*
-./LevelPrototypeFP2/[Mm]emoryCaptures/*
+./alphaGame/[Ll]ibrary/*
+./alphaGame/[Tt]emp/*
+./alphaGame/[Oo]bj/*
+./alphaGame/[Bb]uild/*
+./alphaGame/[Bb]uilds/*
+./alphaGame/[Ll]ogs/*
+./alphaGame/[Mm]emoryCaptures/*
+./alphaGame/[Pp]ackages/*
+./alphaGame/[Uu]serSettings/*
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !./LevelPrototypeFP2/[Aa]ssets/**/*.meta
