--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+.vsconfig
+Library/
+Logs/
+Packages/
+ProjectSettings/
+UserSettings/
+obj/
 alphaGame/[Ll]ibrary/*
 alphaGame/[Tt]emp/*
 alphaGame/[Oo]bj/*
